--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="{% block description %}PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}PolyLearn{% endblock %}</title>
+    <title>{% block title %}PolyLearn | Plateforme d'entrainement intelligente{% endblock %}</title>
 
     <meta name="author" content="PolyLearn">
     <meta name="generator" content="PolyLearn">
