replace url index.html with /

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
   <div class="mdl-layout__header-row">
-    <a href="{{ url_for('index')}}">
+    <a href="/">
     <span class="android-title mdl-layout-title josefin">
       <img class="android-logo-image" height="40px" src="{{url_for('static', filename='images/logo.png')}}">
       <span>PolyLearn</span>
@@ -38,7 +38,7 @@
       <li class="mdl-menu__item">Android History</li>
     </ul>
   -->
-    <a href="{{ url_for('index')}}">
+    <a href="/">
       <span class="android-mobile-title mdl-layout-title">
         <!--<img class="android-logo-image" src="http://polylearn.co/img/65ad7dd4.logo.png">-->
         PolyLearn
@@ -49,7 +49,7 @@
 
 <div class="android-drawer mdl-layout__drawer">
   <span class="mdl-layout-title">
-    <a href="{{ url_for('index')}}">
+    <a href="/">
       <img class="android-logo-image" src="{{url_for('static', filename='images/logo.png')}}">
     </a>
   </span>
