fix typo anchor technologies

--- a/templates/concept.html
+++ b/templates/concept.html
@@ -93,7 +93,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
           -->
           </section>
 
-          <section id="technologys" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+          <section id="technologies" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
                 <h4>Des technologies inédites</h4>
