--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
     <div class="android-wear-band-text">
       <div class="mdl-typography--display-2 mdl-typography--font-thin">Ancrage mémoriel</div>
       <p>
-        <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="{{ url_for('concept')}}#technologys">
+        <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="{{ url_for('concept')}}#technologies">
           En savoir plus sur nos technologies&nbsp;<i class="material-icons">chevron_right</i>
         </a>
       </p>
