--- a/templates/concept.html
+++ b/templates/concept.html
@@ -49,7 +49,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h2 class="mdl-typography--title" style="margin:10px 0;">Identification des faiblesses</h2>
                   <p>
-                    <b>L'identification des faiblesses</b> est une technologie développé par <a href="/">PolyLearn</a> qui vous permet de cerner vos difficultés.
+                    <b>L'identification des faiblesses</b> est une technologie développée par <a href="/">PolyLearn</a> qui vous permet de cerner vos difficultés.
                     Notre <a href="{{ url_for('pedagogie')}}">pédagogie est centrée sur vous</a> !
                   </p>
                 </div>
