fix logo in rich snippet

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "url": "http://polylearn.co",
-  "logo": "http://polylearn.co/img/65ad7dd4.logo.png",
+  "logo": "http://polylearn.co/static/images/logo.png",
   "sameAs" : [
     "https://www.facebook.com/polylearn.co/",
     "https://plus.google.com/+Polylearn"
