--- a/templates/concept.html
+++ b/templates/concept.html
@@ -28,14 +28,14 @@ En savoir plus sur les avantages et le concept de la plateforme.
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--12-col">
               <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
-                <h4 class="mdl-cell mdl-cell--12-col">Les + PolyLearn</h4>
+                <h2 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Les + PolyLearn</h2>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
                     <img src="https://cdn4.iconfinder.com/data/icons/flat-rounded-seo-icons/80/page-quality-128.png" width="100" height="100">
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h2 class="mdl-typography--title" style="margin:10px 0;">Contenu pédagogique d'une grande qualité</h2>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Contenu pédagogique d'une grande qualité</h3>
                   <p>
                     Nous portons une grande attention au contenu que nous vous mettons à disposition.
                     Ce contenu pédagogique a été choisi et réalisé par des professionels du secteur.
@@ -47,7 +47,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h2 class="mdl-typography--title" style="margin:10px 0;">Identification des faiblesses</h2>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Identification des faiblesses</h3>
                   <p>
                     <b>L'identification des faiblesses</b> est une technologie développée par <a href="/">PolyLearn</a> qui vous permet de cerner vos difficultés.
                     Notre <a href="{{ url_for('pedagogie')}}">pédagogie est centrée sur vous</a> !
@@ -59,7 +59,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h2 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et un parcours d'apprentissage sur-mesure</h2>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et un parcours d'apprentissage sur-mesure</h3>
                   <p>
                   Grâce à nos technologies, nous sommes en mesure de vous proposer un <i>entrainement intelligent</i>  et un <i>parcours d'apprentissage optimisé</i>.
                   </p>
@@ -70,7 +70,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h2 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et des Applications mobiles</h2>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et des Applications mobiles</h3>
                   <p>
                     Grâce à notre plateforme internet et nos applications iOS & android, vous travaillez quand vous voulez.
                   </p>
@@ -96,14 +96,14 @@ En savoir plus sur les avantages et le concept de la plateforme.
           <section id="technologies" class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
-                <h4>Des technologies inédites</h4>
+                <h2 style="margin-top:5px;" class="mdl-typography--headline">Des technologies inédites</h2>
                 PolyLearn repose sur des technologies qui permet d'optimiser votre temps de révision.
                 <ul>
                   <li>
-                    1. Identification des faiblesses
+                    <h3 class="mdl-typography--title">1. Identification des faiblesses</h3>
                   </li>
                   <li>
-                    2. Optimisation du parcours d'apprentissage
+                    <h3 class="mdl-typography--title">2. Optimisation du parcours d'apprentissage</h3>
                   </li>
                 </ul>
               </div>
