--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="android-be-together-section mdl-typography--text-center">
   <div class="android-font android-slogan">Réussir n'a jamais été aussi facile</div>
-  <div class="android-font android-sub-slogan">Venez découvrir une nouvelle méthode d'entrainement à la pointe de la technologie</div>
+  <h1 class="android-font android-sub-slogan">Venez découvrir une nouvelle méthode d'entrainement à la pointe de la technologie</h1>
 
   <div class="mdl-grid">
     <a href="{{ app_url('toeic') }}" class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-phone">
@@ -45,7 +45,7 @@
 
 <div class="android-screen-section mdl-typography--text-center">
   <a name="features"></a>
-  <div class="mdl-typography--display-1-color-contrast">Une suite complète d'entrainement</div>
+  <h3 class="mdl-typography--display-1-color-contrast">Une suite complète d'entrainement</h3>
   <br>
   <div class="mdl-typography--headline-color-contrast">et bien plus...</div>
 
@@ -95,7 +95,7 @@
 <div class="android-more-section">
 
   <div class="" style="text-align:center">
-    <div class="android-section-title mdl-typography--display-1-color-contrast">Des applications mobiles</div>
+    <h3 class="android-section-title mdl-typography--display-1-color-contrast" style="padding-bottom:0">Des applications mobiles</h3>
     <p class="mdl-typography--title-color-contrast">
       Entrainez-vous depuis votre smartphone
     </p>
