added alt for images

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@ Découvrez l'équipe de PolyLearn
         <div class="mdl-cell mdl-cell--1-col"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
-          <img src="{{url_for('static', filename='images/team/flo.jpg')}}" class="" height="120" width="120">
+          <img alt="Florent CLAPIÉ" src="{{url_for('static', filename='images/team/flo.jpg')}}" class="" height="120" width="120">
           <h2 class="mdl-typography--display-1">Florent CLAPIÉ</h2>
           <h3 class="mdl-typography--title-color-contrast">CEO et Co-fondateur</h3>
 
@@ -36,7 +36,7 @@ Découvrez l'équipe de PolyLearn
         <div class="mdl-cell mdl-cell--2-col"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
-          <img src="{{url_for('static', filename='images/team/clem.png')}}" height="120" width="120">
+          <img alt="Clément VILLAIN" src="{{url_for('static', filename='images/team/clem.png')}}" height="120" width="120">
           <h2 class="mdl-typography--display-1">Clément VILLAIN</h2>
           <h3 class="mdl-typography--title-color-contrast">CTO et Co-fondateur</h3>
 
