--- a/templates/footer.html
+++ b/templates/footer.html
@@ -36,15 +36,15 @@
   <div class="mdl-mega-footer--top-section">
     <div class="mdl-mega-footer--left-section">
       <a href="https://www.facebook.com/polylearn.co/">
-      <img src="{{url_for('static', filename='images/social/facebook.png')}}">
+      <img alt="Facebook" src="{{url_for('static', filename='images/social/facebook.png')}}">
       </a>
       &nbsp;
       <a href="https://www.google.com/+Polylearn">
-      <img src="{{url_for('static', filename='images/social/googleplus.png')}}">
+      <img alt="Google+" src="{{url_for('static', filename='images/social/googleplus.png')}}">
       </a>
       &nbsp;
       <a href="https://twitter.com/PolyLearn_co">
-      <img src="{{url_for('static', filename='images/social/twitter.png')}}">
+      <img alt="Twitter" src="{{url_for('static', filename='images/social/twitter.png')}}">
       </a>
     </div>
     <div class="mdl-mega-footer--right-section">
