--- a/templates/includes/features.html
+++ b/templates/includes/features.html
@@ -1,7 +1,7 @@
 <div class="mdl-grid container mdl-typography--text-center" id="features">
   <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone features">
     <div>
-      <img src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/078-128.png">
+      <img alt="Cours" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/078-128.png">
       <br>
     </div>
     <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Cours</div>
@@ -9,7 +9,7 @@
 
   <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone features">
     <div>
-      <img src="{{url_for('static', filename='images/features/target.png')}}">
+      <img alt="Identification des faiblesses" src="{{url_for('static', filename='images/features/target.png')}}">
       <br>
     </div>
     <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Identification des faiblesses</div>
@@ -17,7 +17,7 @@
 
   <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone features">
     <div>
-      <img src="{{url_for('static', filename='images/features/exercises.png')}}">
+      <img alt="Exercices" src="{{url_for('static', filename='images/features/exercises.png')}}">
       <br>
     </div>
     <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Exercices</div>
@@ -29,14 +29,14 @@
 
   <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone features">
     <div>
-      <img src="{{url_for('static', filename='images/features/exam.png')}}">
+      <img alt="Examens" src="{{url_for('static', filename='images/features/exam.png')}}">
       <br>
     </div>
     <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Examens</div>
   </div>
   <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone features">
     <div>
-      <img src="{{url_for('static', filename='images/features/graph.png')}}">
+      <img alt="Suivi personnalisé" src="{{url_for('static', filename='images/features/graph.png')}}">
       <br>
     </div>
     <div clas="mdl-typography--font-regular mdl-typography--text-uppercase">Suivi</div>
