--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,8 @@
       Entrainez-vous depuis votre smartphone
     </p>
 
-    <img src="{{url_for('static', filename='images/index/playstore.png')}}" width="125">
-    <img width="143" src="{{url_for('static', filename='images/index/appstore.png')}}">
+    <img alt="Available on playstore" src="{{url_for('static', filename='images/index/playstore.png')}}" width="125">
+    <img alt="Available on appstore" width="143" src="{{url_for('static', filename='images/index/appstore.png')}}">
   </div>
 
   <div class="mdl-grid">
@@ -109,7 +109,7 @@
     </div>
 
     <div class="mdl-cell mdl-cell--4-col" style="text-align:center">
-      <img class="img-responsive-100"src="{{url_for('static', filename='images/index/poly_phone.png')}}">
+      <img alt="PolyLearn App" class="img-responsive-100"src="{{url_for('static', filename='images/index/poly_phone.png')}}">
     </div>
 
     <div class="mdl-cell--4-col">
