--- a/templates/concept.html
+++ b/templates/concept.html
@@ -31,7 +31,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 <h2 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Les + PolyLearn</h2>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="https://cdn4.iconfinder.com/data/icons/flat-rounded-seo-icons/80/page-quality-128.png" width="100" height="100">
+                    <img alt="Contenu pédagogique" src="https://cdn4.iconfinder.com/data/icons/flat-rounded-seo-icons/80/page-quality-128.png" width="100" height="100">
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
@@ -43,7 +43,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="{{url_for('static', filename='images/features/target.png')}}" width="100" height="100">
+                    <img alt="Identification des faiblesses" src="{{url_for('static', filename='images/features/target.png')}}" width="100" height="100">
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
@@ -55,7 +55,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="{{url_for('static', filename='images/features/parcours.png')}}" width="100" height="100">
+                    <img alt="Progression optimisée" src="{{url_for('static', filename='images/features/parcours.png')}}" width="100" height="100">
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
@@ -66,7 +66,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
                   <div class="section__circle-container__circle">
-                    <img src="{{url_for('static', filename='images/features/devices.png')}}" width="100" height="100">
+                    <img alt="Multi-plateformes" src="{{url_for('static', filename='images/features/devices.png')}}" width="100" height="100">
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
