reduce roboto fonts

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <meta property="og:url" content="http://polylearn.co">
     <meta property="fb:app_id" content="367497400125453">
     <!-- Page styles -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,thin,light&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/material-design-lite/material.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
