removed Josefin fonts

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,8 +2,8 @@
   <div class="mdl-layout__header-row">
     <a href="/">
     <span class="android-title mdl-layout-title josefin">
-      <img alt="Logo Polylearn" class="android-logo-image" height="40" width="40" src="{{url_for('static', filename='images/logo.png')}}">
-      <span>PolyLearn</span>
+      <img alt="Logo Polylearn" class="android-logo-image" height="50" src="{{url_for('static', filename='images/logo-polylearn.jpg')}}">
+      <!--<span>PolyLearn</span>-->
     </span>
     </a>
     <!-- Add spacer, to align navigation to the right in desktop -->
@@ -50,7 +50,7 @@
 <div class="android-drawer mdl-layout__drawer">
   <span class="mdl-layout-title">
     <a href="/">
-      <img alt="Logo PolyLearn" class="android-logo-image" src="{{url_for('static', filename='images/logo.png')}}">
+      <img alt="Logo PolyLearn" class="android-logo-image" src="{{url_for('static', filename='images/logo-polylearn.jpg')}}">
     </a>
   </span>
   <nav class="mdl-navigation">
