Center img on about page.

--- a/static/styles.css
+++ b/static/styles.css
@@ -908,6 +908,8 @@ a .about-panel--components:hover {
 /* about */
 .about img {
   border-radius: 50%;
+  margin: 0 auto;
+  display: block;
 }
 
 
