hide fake col for small screen

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@ Découvrez l'équipe de PolyLearn
 
     <section class="mdl-grid about">
 
-        <div class="mdl-cell mdl-cell--1-col"></div>
+        <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
           <img alt="Florent CLAPIÉ" src="{{url_for('static', filename='images/team/flo.jpg')}}" class="" height="120" width="120">
@@ -33,7 +33,7 @@ Découvrez l'équipe de PolyLearn
 
         </div>
 
-        <div class="mdl-cell mdl-cell--2-col"></div>
+        <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
 
         <div class="mdl-cell mdl-cell--4-col">
           <img alt="Clément VILLAIN" src="{{url_for('static', filename='images/team/clem.png')}}" height="120" width="120">
