added top padding

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@ Découvrez l'équipe de PolyLearn
 
   <div class="container mdl-shadow--2dp mdl-color--white" style="border-radius:2px;">
 
-    <section class="mdl-grid about">
+    <section class="mdl-grid about" style="padding: 35px 0">
 
         <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div>
 
