--- a/templates/products.html
+++ b/templates/products.html
@@ -19,7 +19,7 @@ PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
 
     <div class="demo-card-square mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
       <div class="mdl-card__title mdl-card--expand about-panel-1">
-        <h2 class="mdl-card__title-text">TOEIC BULATS</h2>
+        <h2 class="mdl-card__title-text">TOEIC</h2>
       </div>
       <div class="mdl-card__supporting-text">
         <ul>
