Essayer ! no longer opens new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
   </div>
 </div>
 
-<a href="{{ url_for('products')}}" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">ESSAYER !</a>
+<a href="{{ url_for('products')}}" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">ESSAYER !</a>
 
 {% endblock %}
 
