--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,27 @@
 
   {% block script %}{% endblock %}
 
+  <!--Start of HappyFox Live Chat Script-->
+  <script>
+   window.HFCHAT_CONFIG = {
+       EMBED_TOKEN: "33cea870-f5b7-11e5-957b-672456730341",
+       ACCESS_TOKEN: "bb32b86709a3456db45cf7c1149b32d2",
+       HOST_URL: "https://happyfoxchat.com",
+       ASSETS_URL: "https://d1l7z5ofrj6ab8.cloudfront.net/visitor"
+   };
+
+  (function() {
+    var scriptTag = document.createElement('script');
+    scriptTag.type = 'text/javascript';
+    scriptTag.async = true;
+    scriptTag.src = window.HFCHAT_CONFIG.ASSETS_URL + '/js/widget-loader.js';
+
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(scriptTag, s);
+  })();
+  </script>
+  <!--End of HappyFox Live Chat Script-->
+
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
   +function(l,e){(ct=this[GoogleAnalyticsObject='ct']||function(l,e){(ct.q=ct.q||[]).push(arguments)}).l=+new Date,l=document.createElement('script'),l.src='//www.google-analytics.com/analytics.js',(e=document.getElementsByTagName('script')[0]).parentNode.insertBefore(l,e);try{localStorage.setItem(ct.l,ct.l),l=localStorage.getItem(ct.l)-ct.l,localStorage.removeItem(ct.l)}catch(l){};ct('create','UA-67551062-2',l?{}:{clientId:localStorage.clientId,storage:'none'}),ct(function(l,e){localStorage.clientId=l.get('clientId')}),ct('send','pageview')}()
