--- a/static/styles.css
+++ b/static/styles.css
@@ -63,11 +63,9 @@ h1 {
 }
 
 .android-fab {
-  position: absolute;
-  right: 20%;
+  background-color: #E8E8E8;
   bottom: -26px;
   z-index: 3;
-  background: #637EFF !important;
   color: black !important;
 }
 
@@ -424,13 +422,6 @@ h1.android-sub-slogan {
   margin-right: auto;
 }
 
-  .android-more-section .android-section-title {
-    margin-top: 0px;
-    padding-bottom: 24px;
-  }
-
-.android-card-container {
-}
 
   .android-card-container .mdl-card__media {
     overflow: hidden;
@@ -945,4 +936,30 @@ a .about-panel--components:hover {
 
 .features img {
   padding-bottom: 10px;
+}
+
+.font-300 {
+  font-weight: 300;
+}
+
+hr.primary {
+  width: 40px;
+  height: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color:#FF0066;
+  border: 0 none;
+  margin-top: 5px;
+  margin-bottom:15px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.caption {
+  padding: 120px 0;
+  background: url('./images/index/mockup.jpg') center center fixed;
+  background-size: cover;
+  color: white;
 }
