--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,30 @@
     Nos experts ont identifié et selectionné les différents aspects pédagogiques permettant un accompagnement et une réussite rapide dans vos examens/certifications.
   </p>
 
-  <div class="container">
-    <div class="mdl-grid">
 
+  <div class="services">
+    <div class="mdl-grid text-center container">
+      <div class="mdl-cell mdl-cell--4-col">
+        <i class="material-icons">account_balance</i>
+        <h4>Contenu pédagogique</h4>
+        <p>
+          Notre contenu pédagogique a été rigoureusement choisi afin d'être sûr qu'il couvre l'ensemble de votre examen : cours, entrainements et examens blancs.
+        </p>
+      </div>
+      <div class="mdl-cell mdl-cell--4-col">
+        <i class="material-icons">assignment_ind</i>
+        <h4>Entrainement sur-mesure</h4>
+        <p>
+          Nous avons créé des technologies qui nous permettent de vous proposer un entrainement adaptatif selon vos besoins et votre progression.
+        </p>
+      </div>
+      <div class="mdl-cell mdl-cell--4-col">
+        <i class="material-icons">extension</i>
+        <h4>Expérience utilisateur</h4>
+        <p>
+          En plus d'une pédagogie centrée sur vous, nous avons travaillé sur des fonctionnalitées supplémentaires pour vous offrir une expérience incroyable.
+        </p>
+      </div>
     </div>
   </div>
 
@@ -58,6 +79,7 @@
       Voir les examens
     </a>
   </div>
+
 </div>
 
 <div class="caption">
