update meta title

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="{% block description %}PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.{% endblock %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}PolyLearn | Plateforme d'entrainement intelligente{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>{% block title %}PolyLearn · Réussir rapidement votre examen (Code de la Route, TOEIC...){% endblock %}</title>
 
     <meta name="author" content="PolyLearn">
     <meta name="generator" content="PolyLearn">
@@ -31,7 +31,7 @@
     {% include 'includes/manifest.html' %}
 
     <meta property="og:description" content="PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.">
-    <meta property="og:title" content="Plateforme d'entrainement intelligente au TOEIC">
+    <meta property="og:title" content="Réussissez vos examens rapidement">
     <meta property="og:site_name" content="PolyLearn.co">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://polylearn.co">
