--- a/templates/concept.html
+++ b/templates/concept.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Le concept PolyLearn{% endblock %}
+{% block title %}Le concept{% endblock %}
 
 {% block description %}
 En savoir plus sur les avantages et le concept de la plateforme.
