change http to https

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <meta property="og:title" content="Réussissez vos examens rapidement">
     <meta property="og:site_name" content="PolyLearn.co">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://polylearn.co">
+    <meta property="og:url" content="https://polylearn.co">
     <meta property="fb:app_id" content="367497400125453">
     <!-- Page styles -->
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/material-design-lite/material.min.css')}}">
