--- a/templates/index.html
+++ b/templates/index.html
@@ -123,8 +123,8 @@
 {
   "@context": "http://schema.org",
   "@type": "Organization",
-  "url": "http://polylearn.co",
-  "logo": "http://polylearn.co/static/images/logo.png",
+  "url": "https://polylearn.co",
+  "logo": "https://polylearn.co/static/images/logo.png",
   "sameAs" : [
     "https://www.facebook.com/polylearn.co/",
     "https://plus.google.com/+Polylearn"
