use of crisp for contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,26 +57,7 @@
 
   {% block script %}{% endblock %}
 
-  <!--Start of HappyFox Live Chat Script-->
-  <script>
-   window.HFCHAT_CONFIG = {
-       EMBED_TOKEN: "33cea870-f5b7-11e5-957b-672456730341",
-       ACCESS_TOKEN: "bb32b86709a3456db45cf7c1149b32d2",
-       HOST_URL: "https://happyfoxchat.com",
-       ASSETS_URL: "https://d1l7z5ofrj6ab8.cloudfront.net/visitor"
-   };
-
-  (function() {
-    var scriptTag = document.createElement('script');
-    scriptTag.type = 'text/javascript';
-    scriptTag.async = true;
-    scriptTag.src = window.HFCHAT_CONFIG.ASSETS_URL + '/js/widget-loader.js';
-
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(scriptTag, s);
-  })();
-  </script>
-  <!--End of HappyFox Live Chat Script-->
+  <script type="text/javascript">CRISP_WEBSITE_ID = "f4d517b9-c49f-4dae-b269-b085455b3da2";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
