--- a/templates/header.html
+++ b/templates/header.html
@@ -12,10 +12,10 @@
     <!-- Navigation -->
     <div class="android-navigation-container">
       <nav class="android-navigation mdl-navigation">
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{ url_for('products')}}">Les examens</a>
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{ url_for('concept')}}">Le concept</a>
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{url_for('pedagogie')}}">La pédagogie</a>
-        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{{url_for('about')}}">L'équipe</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase {% if request.endpoint == 'products' %} is_active {%endif%}" href="{{ url_for('products')}}">Les examens</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase {% if request.endpoint == 'concept' %} is_active {%endif%}" href="{{ url_for('concept')}}">Le concept</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase {% if request.endpoint == 'pedagogie' %} is_active {%endif%}" href="{{url_for('pedagogie')}}">La pédagogie</a>
+        <a class="mdl-navigation__link mdl-typography--text-uppercase {% if request.endpoint == 'about' %} is_active {%endif%}" href="{{url_for('about')}}">L'équipe</a>
         <a class=" mdl-typography--text-uppercase" href="{{url_for('contact')}}">
           <label class="mdl-button mdl-button--icon" for="search-field">
             <i class="material-icons">email</i>
@@ -24,17 +24,6 @@
       </nav>
     </div>
 
-    <!--
-    <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
-      <i class="material-icons">more_vert</i>
-    </button>
-    <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-      <li class="mdl-menu__item">5.0 Lollipop</li>
-      <li class="mdl-menu__item">4.4 KitKat</li>
-      <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
-      <li class="mdl-menu__item">Android History</li>
-    </ul>
-  -->
     <a href="/">
       <span class="android-mobile-title mdl-layout-title">
         <!--<img class="android-logo-image" src="http://polylearn.co/img/65ad7dd4.logo.png">-->
