--- a/static/styles.css
+++ b/static/styles.css
@@ -189,7 +189,7 @@ h1 {
 
   .android-drawer .mdl-layout-title {
     position: relative;
-    background: #2B3882;
+    background: white;
     height: 160px;
     color: white;
   }
@@ -468,32 +468,12 @@ h1.android-sub-slogan {
     font-size: 16px;
   }
 
-.android-footer {
-  background-color: #222426;
-  position: relative;
-}
-
-  .android-footer a:hover {
-    color: #4253B2;
-  }
-
-  .android-footer .mdl-mega-footer--top-section::after {
-    border-bottom: none;
-  }
-
-  .android-footer .mdl-mega-footer--middle-section::after {
-    border-bottom: none;
-  }
-
-  .android-footer .mdl-mega-footer--bottom-section {
+  .polylearn-footer {
+    background-color: #222426;
     position: relative;
   }
 
-  .android-footer .mdl-mega-footer--bottom-section a {
-    margin-right: 2em;
-  }
-
-  .android-footer .mdl-mega-footer--right-section a .material-icons {
+  .polylearn-footer .mdl-mega-footer--right-section a .material-icons {
     position: relative;
     top: 6px;
   }
