--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,15 @@
   </head>
   <body>
 
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.6&appId=367497400125453";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     {% block header %}{% include 'header.html' %}{% endblock %}
 
