--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="{% block description %}PolyLearn est une plateforme d'entrainement à différents examens qui identifie vos faiblesses pour optimiser votre temps de révision et votre score.{% endblock %}">
+    <meta name="description" content="{% block description %}PolyLearn vous aide à réussir rapidement votre Code de la Route, TOEIC ou BULATS. Optimisation de votre temps de révision et de votre score.{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>{% block title %}PolyLearn · Réussir rapidement votre examen (Code de la Route, TOEIC...){% endblock %}</title>
+    <title>{% block title %}PolyLearn · Réussissez rapidement votre examen{% endblock %}</title>
 
     <meta name="author" content="PolyLearn">
     <meta name="generator" content="PolyLearn">
+    <link href="https://plus.google.com/+Polylearn" rel="publisher" />
+    <meta name="robots" content="index, follow">
 
     <meta name="theme-color" content="#2B3882">
     {% include 'includes/manifest.html' %}
@@ -34,8 +36,15 @@
     <meta property="og:title" content="Réussissez vos examens rapidement">
     <meta property="og:site_name" content="PolyLearn.co">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://polylearn.co/static/images/index/mockup.jpg" />
     <meta property="og:url" content="https://polylearn.co">
     <meta property="fb:app_id" content="367497400125453">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@PolyLearn_co">
+    <meta name="twitter:title" content="PolyLearn · Réussissez rapidement votre examen">
+    <meta name="twitter:description" content="PolyLearn vous aide à réussir rapidement votre Code de la Route, TOEIC ou BULATS. Optimisation de votre temps de révision et de votre score.">
+    <meta name="twitter:image:src" content="https://polylearn.co/static/images/index/mockup.jpg">
     <!-- Page styles -->
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/material-design-lite/material.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
